fix CSS to wrap code in the pre tag

--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ header {
     box-sizing: BORDER-BOX;
 }
 
+pre {
+    white-space: pre-wrap;       /* CSS 3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 #argon-banner {
 	float: left;
 	clear: left;
